# pep508_rs

./: .gitignore  Cargo.toml  Changelog.md  Readme.md  pyproject.toml
.github/workflows/: release.yml  test.yml
pypi_analysis/: bigquery.ipynb  bigquery_entirety.ipynb  download.py
src/: lib.rs  marker.rs  modern.rs  origin.rs  path.rs  tests.rs  unnamed.rs  verbatim_url.rs
src/marker/: algebra.rs  parse.rs  simplify.rs  tree.rs
src/normalize/: extra_name.rs  package_name.rs
test/: test_pep508.py
