[package]
name = "pep508_rs"
version = "0.2.1-beta.2"
description = "A library for python dependency specifiers, better known as PEP 508"
edition = "2021"
include = ["/src", "Changelog.md", "License-Apache", "License-BSD", "Readme.md", "pyproject.toml"]
# Same license as pypa/packaging where the tests are from
license = "Apache-2.0 OR BSD-2-Clause"
readme = "Readme.md"
repository = "https://github.com/konstin/pep508_rs"

[dependencies]
anyhow = { version = "1.0.69", optional = true }
once_cell = "1.17.1"
pep440_rs = "0.3.6"
pyo3 = { version = "0.18.2", optional = true, features = ["abi3", "extension-module"] }
pyo3-log = { version = "0.8.0", optional = true }
regex = { version = "1.7.1", default-features = false, features = ["std"] }
serde = { version = "1.0.150", features = ["derive"], optional = true }
serde_json = { version = "1.0.89", optional = true }
thiserror = "1.0.37"
toml = { version = "0.7.2", optional = true }
tracing = { version = "0.1.37", features = ["log"] }
unicode-width = "0.1.10"
url = { version = "2.3.1", features = ["serde"] }

[dev-dependencies]
indoc = "2.0.0"
log = "0.4.17"
testing_logger = "0.1.1"
serde_json = "1.0.96"

[features]
pyo3 = ["dep:pyo3", "pep440_rs/pyo3", "pyo3-log"]
serde = ["dep:serde", "pep440_rs/serde"]
modern = ["serde", "toml", "anyhow"]
default = []

[lib]
name = "pep508_rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true

[profile.maturin]
inherits = "release"
strip = true

