[package]
name = "pep508_rs"
version = "0.6.1"
description = "A library for python dependency specifiers, better known as PEP 508"
edition = "2021"
include = ["/src", "Changelog.md", "License-Apache", "License-BSD", "Readme.md", "pyproject.toml"]
# Same license as pypa/packaging where the tests are from
license = "Apache-2.0 OR BSD-2-Clause"
readme = "Readme.md"
repository = "https://github.com/konstin/pep508_rs"

[lib]
name = "pep508_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
derivative = "2.2.0"
once_cell = "1.19.0"
pep440_rs = "0.6.5"
pyo3 = { version = "0.22", optional = true, features = ["abi3", "extension-module"] }
pyo3-log = { version = "0.11", optional = true }
regex = "1.10.4"
rkyv = { version = "0.7.44", features = ["strict"], optional = true }
serde = { version = "1.0.198", features = ["derive"], optional = true }
serde_json = { version = "1.0.116", optional = true }
thiserror = "1.0.59"
tracing = { version = "0.1.40", optional = true }
unicode-width = "0.1.11"
url = "2.5.0"
urlencoding = "2.1.3"

[dev-dependencies]
indoc = "2.0.5"
log = "0.4.21"
serde_json = "1.0.116"
testing_logger = "0.1.1"

[features]
pyo3 = ["dep:pyo3", "pep440_rs/pyo3", "pyo3-log", "tracing", "tracing/log"]
rkyv = ["dep:rkyv", "pep440_rs/rkyv"]
serde = ["dep:serde", "pep440_rs/serde", "url/serde"]
tracing = ["dep:tracing", "pep440_rs/tracing"]
# PEP 508 allows only URLs such as `foo @ https://example.org/foo` or `foo @ file:///home/ferris/foo`, and
# arguably does not allow relative paths in file URLs (`foo @ file://./foo`,
# `foo @ file:foo-3.0.0-py3-none-any.whl`, `foo @ file://foo-3.0.0-py3-none-any.whl`), as they are not part of the
# relevant RFCs, even though widely supported. Pip accepts relative file URLs and paths instead of urls
# (`foo @ ./foo-3.0.0-py3-none-any.whl`). The `non-pep508-features` controls whether these non-spec features will
# be supported.
non-pep508-extensions = []
default = []


