[project]
name = "pep508_rs"
version = "0.3.0"
description = "A library for python dependency specifiers, better known as PEP 508"
readme = "Readme.md"

[tool.poetry]
name = "pep508_rs"
version = "0.2.3"
description = "A library for python dependency specifiers, better known as PEP 508"
authors = ["konstin <konstin@mailbox.org>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
maturin = "^1.0.0"
pytest = "^8.0.0"
ruff = "^0.1.15"

[tool.maturin]
features = ["pyo3"]

[tool.pytest.ini_options]
minversion = "8.0.0"
addopts = "--tb=short"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
